--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.2.0-rc.1",
     "iview": "^3.1.2",
+    "jsencrypt": "^3.0.0-rc.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "vue": "^2.5.17",
